re PR middle-end/34030 (ICE in in compare_values_warnv, at tree-vrp.c:701)

2007-11-16  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34030
	* fold-const.c (fold_binary): Use correct types for folding
	1 << X & Y to Y >> X & 1.

	* gcc.c-torture/compile/pr34030.c: New testcase.

From-SVN: r130242